# ros2_learning

./: README.md
src/custom_interface/: CMakeLists.txt  package.xml
src/custom_interface/msg/: HardwareStatus.msg
src/custom_publisher/: CMakeLists.txt  package.xml
src/custom_publisher/src/: hw_status_publisher.cpp
src/custom_subscriber/: CMakeLists.txt  package.xml
src/custom_subscriber/src/: hw_status_subscriber.cpp
